add more model validation and association

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id customer %>">
   <p>
-    <strong>Cus id:</strong>
-    <%= customer.cus_ID %>
+    <strong>Code:</strong>
+    <%= customer.code %>
   </p>
 
   <p>
@@ -15,8 +15,8 @@
   </p>
 
   <p>
-    <strong>Phone number:</strong>
-    <%= customer.phone_number %>
+    <strong>Phone:</strong>
+    <%= customer.phone %>
   </p>
 
 </div>
