--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -12,8 +12,8 @@
 <% end %>
 
   <div class="mb-6">
-        <%= form.label :cus_ID, class: label_class %>
-          <%= form.text_field :cus_ID, class: input_class %>
+        <%= form.label :code, class: label_class %>
+          <%= form.text_field :code, class: input_class %>
       </div>
   <div class="mb-6">
         <%= form.label :name, class: label_class %>
@@ -24,8 +24,8 @@
           <%= form.text_field :address, class: input_class %>
       </div>
   <div class="mb-6">
-        <%= form.label :phone_number, class: label_class %>
-          <%= form.number_field :phone_number, class: input_class %>
+        <%= form.label :phone, class: label_class %>
+          <%= form.number_field :phone, class: input_class %>
       </div>
 
 <%= form.submit class: button_class(theme: 'primary') %>
