--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -14,8 +14,8 @@
 
   <ul class="text-slate-700">
       <li>
-        <p class="font-semibold">Cus id:</p>
-        <p><%= @customer.cus_ID %></p>
+        <p class="font-semibold">Code:</p>
+        <p><%= @customer.code %></p>
       </li>
       <li>
         <p class="font-semibold">Name:</p>
@@ -26,8 +26,8 @@
         <p><%= @customer.address %></p>
       </li>
       <li>
-        <p class="font-semibold">Phone number:</p>
-        <p><%= @customer.phone_number %></p>
+        <p class="font-semibold">Phone:</p>
+        <p><%= @customer.phone %></p>
       </li>
   </ul>
 </div>
