--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -5,11 +5,6 @@
   </p>
 
   <p>
-    <strong>Integer:</strong>
-    <%= order.integer %>
-  </p>
-
-  <p>
     <strong>Bill no:</strong>
     <%= order.bill_no %>
   </p>
@@ -45,8 +40,8 @@
   </p>
 
   <p>
-    <strong>Customner:</strong>
-    <%= order.customner_id %>
+    <strong>Customer:</strong>
+    <%= order.customer_id %>
   </p>
 
 </div>
