--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -18,10 +18,6 @@
         <p><%= @order.order_code %></p>
       </li>
       <li>
-        <p class="font-semibold">Integer:</p>
-        <p><%= @order.integer %></p>
-      </li>
-      <li>
         <p class="font-semibold">Bill no:</p>
         <p><%= @order.bill_no %></p>
       </li>
@@ -50,8 +46,8 @@
         <p><%= @order.customer_code %></p>
       </li>
       <li>
-        <p class="font-semibold">Customner:</p>
-        <p><%= @order.customner %></p>
+        <p class="font-semibold">Customer:</p>
+        <p><%= @order.customer %></p>
       </li>
   </ul>
 </div>
