--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,12 +17,28 @@
       <%= link_to "Basic Link", "#", class: "p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block" %>
     </div>
     <div class="items-center block w-full mt-2 text-center lg:flex lg:flex-row lg:flex-1 lg:mt-0 lg:text-left lg:justify-end">
-      <div><%# More links can go here %></div>
+      <div><%# More links can go here %>
+       <%= link_to "Employees", "/employees", class: "p-3 hover:bg-gray-50 transition ease duration-300
+rounded-lg text-center focus:bg-gray-100 lg:inline-block block"  %>
+
       <%= link_to "Customers", "/customers", class: "p-3 hover:bg-gray-50 transition ease duration-300
 rounded-lg text-center focus:bg-gray-100 lg:inline-block block" %>
-<%= link_to "Managers", "/managers", class: "p-3 hover:bg-gray-50 transition ease duration-300
+      
+      <%= link_to "Orders", "/orders", class: "p-3 hover:bg-gray-50 transition ease duration-300
 rounded-lg text-center focus:bg-gray-100 lg:inline-block block"  %>
-      <% if user_signed_in? %>
+
+      <%= link_to "Payments", "/payments", class: "p-3 hover:bg-gray-50 transition ease duration-300
+rounded-lg text-center focus:bg-gray-100 lg:inline-block block"  %>
+      
+      <%= link_to "Products", "/products", class: "p-3 hover:bg-gray-50 transition ease duration-300
+rounded-lg text-center focus:bg-gray-100 lg:inline-block block"  %>
+
+      <%= link_to "Suppliers", "/suppliers", class: "p-3 hover:bg-gray-50 transition ease duration-300
+rounded-lg text-center focus:bg-gray-100 lg:inline-block block"  %>
+     
+
+</div>
+          <% if user_signed_in? %>
         <%= link_to "Edit account", edit_user_registration_path, class: "p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block" %>
         <%= button_to "Log out", destroy_user_session_path, method: :delete, class:"p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block" %>
       <% else %>
