--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -32,7 +32,7 @@
       <%= content_tag :tr, id: dom_id(supplier), class: dom_class(supplier) do %>
       
 
-              <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"><%= supplier.sup_code %></td>
+              <td class="border border-slate-700 p-4 text-slate-500 dark:text-slate-400"><%= supplier.sup_code %></td>
               <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"><%= supplier.supplier_name %></td>
               <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"><%= supplier.product_name %></td>
               <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"><%= supplier.address %></td>
