--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -47,7 +47,7 @@
       </li>
       <li>
         <p class="font-semibold">Customer:</p>
-        <p><%= @order.customer %></p>
+        <p><%= @order.customer.code %></p>
       </li>
   </ul>
 </div>
