--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,7 +35,7 @@
       </li>
       <li>
         <p class="font-semibold">Supplier:</p>
-        <p><%= @product.supplier %></p>
+        <p><%= @product.supplier.sup_code %></p>
       </li>
   </ul>
 </div>
