--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -31,7 +31,7 @@
       </li>
       <li>
         <p class="font-semibold">Customer:</p>
-        <p><%= @payment.customer %></p>
+        <p><%= @payment.customer.code %></p>
       </li>
   </ul>
 </div>
